--- a/materials/setup_test.ipynb
+++ b/materials/setup_test.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kameyamahiroaki/qc-handson/blob/main/materials/setup_test.ipynb)\n"
+      ],
+      "metadata": {
+        "id": "nNMuZ7NtVOiv"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -90,15 +99,6 @@
       "source": [
         "!pip install fujitsu-quantum"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "HoIS2cHlT4qK"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
