--- a/materials/handson_material.ipynb
+++ b/materials/handson_material.ipynb
@@ -17,7 +17,7 @@
         "id": "b4c41b55"
       },
       "source": [
-        "# ハンズオンセミナー講義資料\n",
+        "# ハンズオンセミナー講義資料[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kameyamahiroaki/qc-handson/blob/main/materials/handson_material.ipynb)\n",
         "\n",
         "<div align=\"right\">\n",
         "Date:2025.7.25\n",
